# spectron-hermes

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: .env.example  README.md  live_session.py  simulate_session.py  spectron.json.example
src/spectron_hermes/: __init__.py  _compat.py  client.py  config.py  plugin.yaml  provider.py  tools.py
tests/: test_provider.py
